--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,25 +1,14 @@
-name: Greeting on variable day
-
+name: Inputs and Outputs Lab
 on:
-  workflow_dispatch:
-   inputs:
-    username:
-     description: "eneter your name"
-     required: true
-     default: "guset"
-
-
+  push:
+   tags:
+    - "v*"
 jobs:
-  greeting_job:
+  greet:
     runs-on: ubuntu-latest
-    
-    
     steps:
-      - name: "Step 1"
-        run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
-        env:
-          First_Name: sandeep
-          DAY_OF_WEEK: sunday
-          Greeting: Hello
-      - name: print usename
-        run: echo "$github.event.inputs.username"
+    - name: checkout code
+      uses: actions/checkout@v3
+
+    - name: run my script
+      run: python hellomessage.py
