--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,14 +1,25 @@
-name: Inputs and Outputs Lab
+name: Execution flow
 on:
   push:
-   tags:
-    - "v*"
+  
 jobs:
-  greet:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout code
-      uses: actions/checkout@v3
-
-    - name: run my script
-      run: python hellomessage.py
+  build:
+   runs-on: ubuntu-latest
+   steps:
+   - name: build job
+     run: echo "building the application"
+     run: touc file.txt
+     
+  test:
+   runs-on: ubuntu-latest
+   needs: build
+   steps:
+   - name: test job
+     run: echo "testing  the application"
+     
+  deploy:
+   runs-on: ubuntu-latest
+   needs: test
+   steps:
+   - name: deploy job
+     run: echo "deploy the application"
